@@ -4152,8 +4152,6 @@ operator|!=
 literal|null
 condition|)
 block|{
-try|try
-block|{
 name|SimpleOrderedMap
 name|info
 init|=
@@ -4185,15 +4183,6 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-finally|finally
-block|{
-name|consumeInput
-argument_list|(
-name|req
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 finally|finally
@@ -4255,72 +4244,6 @@ operator|.
 name|info
 argument_list|(
 literal|"Unable to write error response, client closed connection or we are shutting down"
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|consumeInput
-argument_list|(
-name|req
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-comment|// when we send back an error, we make sure we read
-comment|// the full client request so that the client does
-comment|// not hit a connection reset and we can reuse the
-comment|// connection - see SOLR-8453
-DECL|method|consumeInput
-specifier|private
-name|void
-name|consumeInput
-parameter_list|(
-name|HttpServletRequest
-name|req
-parameter_list|)
-block|{
-try|try
-block|{
-name|ServletInputStream
-name|is
-init|=
-name|req
-operator|.
-name|getInputStream
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-operator|!
-name|is
-operator|.
-name|isFinished
-argument_list|()
-operator|&&
-name|is
-operator|.
-name|read
-argument_list|()
-operator|!=
-operator|-
-literal|1
-condition|)
-block|{}
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"Could not consume full client request"
 argument_list|,
 name|e
 argument_list|)
@@ -4928,25 +4851,6 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
-block|}
-finally|finally
-block|{
-if|if
-condition|(
-name|solrRsp
-operator|.
-name|getException
-argument_list|()
-operator|!=
-literal|null
-condition|)
-block|{
-name|consumeInput
-argument_list|(
-name|req
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 DECL|method|checkStateIsValid
